// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgramSettingsViewFM /> expect to render correctly 1`] = `
<form
  onSubmit={[Function]}
>
  <span
    className="fm-settings__heading"
  >
    Use these options to adjust FASTT Math settings.
    <div
      className="fm-settings__content"
    >
      <div
        className="fm-settings__section--top"
      >
        <div
          className="fm-settings__section-title"
        >
          Assignment
        </div>
        <div
          className="fm-settings__section-content"
        >
          <div
            className="fm-settings__section-content-assignment"
          >
            <div
              className="fm-settings__section-content-label"
            >
              Operation
            </div>
            <SettingsSelectBox
              disabled={false}
              fieldClass="fm-settings__section-content-operation-drop-down"
              fieldName="settingsSelectBox"
              fieldValue="Subtraction9"
              id="Operation"
              labelClass=""
              labelPosition="left"
              mixedValue="-2"
              onChange={[Function]}
            >
              <option
                key="Addition9"
                value="Addition9"
              >
                Addition 0-9
              </option>
              <option
                key="Addition12"
                value="Addition12"
              >
                Addition 0-12
              </option>
              <option
                key="Subtraction9"
                value="Subtraction9"
              >
                Subtraction 0-9
              </option>
              <option
                key="Subtraction12"
                value="Subtraction12"
              >
                Subtraction 0-12
              </option>
              <option
                key="Multiplication9"
                value="Multiplication9"
              >
                Multiplication 0-9
              </option>
              <option
                key="Multiplication12"
                value="Multiplication12"
              >
                Multiplication 0-12
              </option>
              <option
                key="Division9"
                value="Division9"
              >
                Division 0-9
              </option>
              <option
                key="Division12"
                value="Division12"
              >
                Division 0-12
              </option>
            </SettingsSelectBox>
          </div>
          <div
            className="fm-settings__section-content-assignment"
          >
            <div
              className="fm-settings__section-content-label"
            >
              Lessons per Day
            </div>
            <div
              key="One lesson per day"
            >
              <input
                checked={false}
                id="Lessons"
                onChange={[Function]}
                type="radio"
                value="1"
              />
              <span
                className="fm-settings__radio-label"
              >
                One lesson per day
              </span>
            </div>
            <div
              key="Up to two lessons per day"
            >
              <input
                checked={true}
                id="Lessons"
                onChange={[Function]}
                type="radio"
                value="2"
              />
              <span
                className="fm-settings__radio-label"
              >
                Up to two lessons per day
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="fm-settings__section--middle"
      >
        <div
          className="fm-settings__section-title"
        >
          Problem Format
        </div>
        <div
          className="fm-settings__section-content"
        >
          <span
            className="fm-settings__section-content-label--orientation"
          >
            Orientation
          </span>
          <span
            key="Horizontal"
          >
            <input
              checked={false}
              id="Orientation"
              onChange={[Function]}
              type="radio"
              value="Horizontal"
            />
            <span
              className="fm-settings__radio-label"
            >
              Horizontal
            </span>
          </span>
          <span
            key="Vertical"
          >
            <input
              checked={true}
              id="Orientation"
              onChange={[Function]}
              type="radio"
              value="Vertical"
            />
            <span
              className="fm-settings__radio-label"
            >
              Vertical
            </span>
          </span>
          <span
            key="Mixed"
          >
            <input
              checked={false}
              id="Orientation"
              onChange={[Function]}
              type="radio"
              value="Mixed"
            />
            <span
              className="fm-settings__radio-label"
            >
              Mixed
            </span>
          </span>
        </div>
      </div>
      <div
        className="fm-settings__section--bottom"
      >
        <div
          className="fm-settings__section-title"
        >
          User Interface
        </div>
        <div
          className="fm-settings__section-content"
        >
          <span>
            <span
              className="fm-settings__section-content-label--accessibility"
            >
              Accessibility
            </span>
            <SettingsSelectBox
              disabled={false}
              fieldClass=""
              fieldName="settingsSelectBox"
              fieldValue="Dark"
              id="Contrast"
              labelClass=""
              labelPosition="left"
              mixedValue="-1"
              onChange={[Function]}
            >
              <option
                key="Standard"
                value="Standard"
              >
                Standard
              </option>
              <option
                key="Dark"
                value="Dark"
              >
                High Contrast/Dark Background
              </option>
              <option
                key="Light"
                value="Light"
              >
                High Contrast/Light Background
              </option>
            </SettingsSelectBox>
          </span>
          <span>
            <span
              className="fm-settings__section-content-label--language"
            >
              Language
            </span>
            <span
              key="English"
            >
              <input
                checked={false}
                id="Language"
                onChange={[Function]}
                type="radio"
                value="English"
              />
              <span
                className="fm-settings__radio-label"
              >
                English
              </span>
            </span>
            <span
              key="Spanish"
            >
              <input
                checked={true}
                id="Language"
                onChange={[Function]}
                type="radio"
                value="Spanish"
              />
              <span
                className="fm-settings__radio-label"
              >
                Spanish
              </span>
            </span>
          </span>
        </div>
      </div>
      <ProgramSettingsButtons
        restoreDefaultHandler={[Function]}
        saveAndReturnHandler={[Function]}
        setInitialValuesHandler={[Function]}
        showRestoreDefaults={true}
        stateResult={true}
        suppressSaveAndReturnRedirect={false}
      />
    </div>
  </span>
</form>
`;

exports[`<ProgramSettingsViewFM /> isTabIsolated is set to true 1`] = `
<form
  onSubmit={[Function]}
>
  <span
    className="fm-settings__heading"
  >
    Use these options to adjust FASTT Math settings.
    <div
      className="fm-settings__content"
    >
      <div
        className="fm-settings__section--top"
      >
        <div
          className="fm-settings__section-title"
        >
          Assignment
        </div>
        <div
          className="fm-settings__section-content"
        >
          <div
            className="fm-settings__section-content-assignment"
          >
            <div
              className="fm-settings__section-content-label"
            >
              Operation
            </div>
            <SettingsSelectBox
              disabled={false}
              fieldClass="fm-settings__section-content-operation-drop-down"
              fieldName="settingsSelectBox"
              fieldValue="Subtraction9"
              id="Operation"
              labelClass=""
              labelPosition="left"
              mixedValue="-2"
              onChange={[Function]}
            >
              <option
                key="Addition9"
                value="Addition9"
              >
                Addition 0-9
              </option>
              <option
                key="Addition12"
                value="Addition12"
              >
                Addition 0-12
              </option>
              <option
                key="Subtraction9"
                value="Subtraction9"
              >
                Subtraction 0-9
              </option>
              <option
                key="Subtraction12"
                value="Subtraction12"
              >
                Subtraction 0-12
              </option>
              <option
                key="Multiplication9"
                value="Multiplication9"
              >
                Multiplication 0-9
              </option>
              <option
                key="Multiplication12"
                value="Multiplication12"
              >
                Multiplication 0-12
              </option>
              <option
                key="Division9"
                value="Division9"
              >
                Division 0-9
              </option>
              <option
                key="Division12"
                value="Division12"
              >
                Division 0-12
              </option>
            </SettingsSelectBox>
          </div>
          <div
            className="fm-settings__section-content-assignment"
          >
            <div
              className="fm-settings__section-content-label"
            >
              Lessons per Day
            </div>
            <div
              key="One lesson per day"
            >
              <input
                checked={false}
                id="Lessons"
                onChange={[Function]}
                type="radio"
                value="1"
              />
              <span
                className="fm-settings__radio-label"
              >
                One lesson per day
              </span>
            </div>
            <div
              key="Up to two lessons per day"
            >
              <input
                checked={true}
                id="Lessons"
                onChange={[Function]}
                type="radio"
                value="2"
              />
              <span
                className="fm-settings__radio-label"
              >
                Up to two lessons per day
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="fm-settings__section--middle"
      >
        <div
          className="fm-settings__section-title"
        >
          Problem Format
        </div>
        <div
          className="fm-settings__section-content"
        >
          <span
            className="fm-settings__section-content-label--orientation"
          >
            Orientation
          </span>
          <span
            key="Horizontal"
          >
            <input
              checked={false}
              id="Orientation"
              onChange={[Function]}
              type="radio"
              value="Horizontal"
            />
            <span
              className="fm-settings__radio-label"
            >
              Horizontal
            </span>
          </span>
          <span
            key="Vertical"
          >
            <input
              checked={true}
              id="Orientation"
              onChange={[Function]}
              type="radio"
              value="Vertical"
            />
            <span
              className="fm-settings__radio-label"
            >
              Vertical
            </span>
          </span>
          <span
            key="Mixed"
          >
            <input
              checked={false}
              id="Orientation"
              onChange={[Function]}
              type="radio"
              value="Mixed"
            />
            <span
              className="fm-settings__radio-label"
            >
              Mixed
            </span>
          </span>
        </div>
      </div>
      <div
        className="fm-settings__section--bottom"
      >
        <div
          className="fm-settings__section-title"
        >
          User Interface
        </div>
        <div
          className="fm-settings__section-content"
        >
          <span>
            <span
              className="fm-settings__section-content-label--accessibility"
            >
              Accessibility
            </span>
            <SettingsSelectBox
              disabled={false}
              fieldClass=""
              fieldName="settingsSelectBox"
              fieldValue="Dark"
              id="Contrast"
              labelClass=""
              labelPosition="left"
              mixedValue="-1"
              onChange={[Function]}
            >
              <option
                key="Standard"
                value="Standard"
              >
                Standard
              </option>
              <option
                key="Dark"
                value="Dark"
              >
                High Contrast/Dark Background
              </option>
              <option
                key="Light"
                value="Light"
              >
                High Contrast/Light Background
              </option>
            </SettingsSelectBox>
          </span>
          <span>
            <span
              className="fm-settings__section-content-label--language"
            >
              Language
            </span>
            <span
              key="English"
            >
              <input
                checked={false}
                id="Language"
                onChange={[Function]}
                type="radio"
                value="English"
              />
              <span
                className="fm-settings__radio-label"
              >
                English
              </span>
            </span>
            <span
              key="Spanish"
            >
              <input
                checked={true}
                id="Language"
                onChange={[Function]}
                type="radio"
                value="Spanish"
              />
              <span
                className="fm-settings__radio-label"
              >
                Spanish
              </span>
            </span>
          </span>
        </div>
      </div>
      <ProgramSettingsButtons
        restoreDefaultHandler={[Function]}
        saveAndReturnHandler={[Function]}
        setInitialValuesHandler={[Function]}
        showRestoreDefaults={true}
        stateResult={false}
        suppressSaveAndReturnRedirect={false}
      />
    </div>
  </span>
</form>
`;
